--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ LANGFUSE_SECRET_KEY=
 LANGFUSE_PUBLIC_KEY=
 LANGFUSE_HOST=
 KAI_API_BASE_URL=
-KAI_API_SECRET_KEY= 
+KAI_API_SECRET_KEY=
 SIMLI_API_KEY=
 SIMLI_FACE_ID=
+BEY_API_KEY=
