--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-livekit-agents[openai]~=1.2.0
-livekit-agents[simli]~=1.2.0
+livekit-agents[openai]~=1.0
+livekit-agents[simli]~=1.2
+livekit-agents[bey]~=1.2
 livekit-plugins-noise-cancellation~=0.2
 python-dotenv
 langfuse
