--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-livekit-agents[openai]~=1.0
-livekit-agents[simli]~=1.2
-livekit-agents[bey]~=1.2
-livekit-plugins-noise-cancellation~=0.2
+livekit-agents[openai]
+livekit-agents[simli]
+livekit-agents[bey]
+livekit-plugins-noise-cancellation
 python-dotenv
 langfuse
 pydantic
